--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,12 @@ language: python
 python:
   - "2.7"
   - "3.5"
-  
+
+install:
+  - pip install coveralls
+
 script:
-  - python hello.py
+  - coverage run hello.py
+  
+after_success:
+  COVERALLS_REPO_TOKEN=Np5HubU6i5clHfY1rdixzuoHLFEhEnv1g coveralls
